<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/main_image_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/image_container"
        android:src="@drawable/ic_main"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_description"
        android:textColor="@color/secondary"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="20dp"
        app:strokeColor="@color/primary"
        app:strokeWidth="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/main_text"
                android:textColor="@color/primary"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/login"
                android:layout_marginTop="25dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/background"
                android:text="@string/signup"
                android:layout_marginTop="16dp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>